examples/anyhow_output.run.stderr
Error: examples/anyhow_output.rs:4:9: kaboom
